[package]
name = "hashfs"
version = "0.1.0"
authors = ["yuchunzhou <chunzhou.yu@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
envmnt = "0.8.4"
log = "0.4.11"
env_logger = "0.8.2"
sodiumoxide = "0.2.6"
hyper-tls = "0.5.0"
hyper = { version = "0.14.1", features = ["full"] }
tokio = { version = "1.0.0", features = ["full"] }
futures = "0.3.8"
multer = "1.2.2"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"